# MinimalOpenGLSetup

./: .gitignore  CMakeLists.txt  CMakePresets.json  LearningOpenGL  README.md  build.sh  main.cpp
include/: app.hpp  app_arcball.hpp  app_bak.hpp  app_fps.hpp  app_v1.hpp  camera.hpp  shader.hpp
include/app/: app.hpp
include/bullet_physics/: bullet_physics.hpp
include/cameras/: arcball_camera.hpp  fps_camera.hpp
include/foo/: foo.hpp
include/input_handlers/: arcball_input_handler.hpp  base.hpp  fps_input_handler.hpp
include/shader/: shader.hpp
shaders/: frag.fs  vert.vs
src/: app.cpp  bullet_physics.cpp  foo.cpp
